Refond le style du carnet

--- a/configuration.yml
+++ b/configuration.yml
@@ -1,6 +1,7 @@
-url: "https://flus.io/carnet/"
+url: "https://flus.fr/carnet/"
+url_flus: "https://flus.fr/"
 title: "carnet de flus"
-subtitle: "où l’on apprend à vivre de logiciel libre"
+subtitle: "le blog d’un média social citoyen"
 author: "Marien"
 timezone: "Europe/Paris"
 blog_slug: "index"
