Force la valeur de l'uuid
En migrant le site, l'uuid a changé et donc les articles ont été dupliqués
dans FRSS :( En forçant la valeur de l'uuid ça ne devrait plus arriver.

--- a/configuration.yml
+++ b/configuration.yml
@@ -6,6 +6,7 @@ author: "Marien"
 timezone: "Europe/Paris"
 blog_slug: "index"
 websub_hub: "https://websub.flus.io/"
+uuid: "d836fc75-3412-5caf-91e2-2fad31343882"
 
 development:
     url: "filesystem"
