Change le "subtitle" du carnet

--- a/configuration.yml
+++ b/configuration.yml
@@ -1,7 +1,7 @@
 url: "https://flus.fr/carnet/"
 url_flus: "https://flus.fr/"
 title: "carnet de flus"
-subtitle: "le blog d’un média social citoyen"
+subtitle: "blog d’un média social de veille"
 author: "Marien"
 timezone: "Europe/Paris"
 blog_slug: "index"
