Ajoute des majuscules au nom du blog

--- a/configuration.yml
+++ b/configuration.yml
@@ -1,6 +1,6 @@
 url: "https://flus.fr/carnet/"
 url_flus: "https://flus.fr/"
-title: "carnet de flus"
+title: "Carnet de Flus"
 subtitle: "blog d’un média social de veille"
 author: "Marien"
 timezone: "Europe/Paris"
